2005-07-10  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* shapes/shapeinf.h, mapedit/exult_studio.glade, shapeedit.cc: Corrected
	  damage type (from 'poison' to 'lightning') and added two other damage
	  types ('ethereal' and 'sonic') and immunities -- both of which are used
	  in BG, but not in SI. Also, left shapeedit.cc pratically ready to get
	  'ready spots' working (it does for BG already).
	* actors.cc: Implemented immunities/vulnerabilities. Also allowed actors
	  with cant_die flag to appear to be wounded (flash with red outline), as
	  in the original. Last, prevented party members from calling the guards if
	  they die because of the Avatar.

2005-07-09    <jeff@mini.nerble.net>

	* mapedit/npclst.cc (Npc_chooser): Added NPC browser.

2005-07-10  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* mapedit/exult_studio.glade, shapeedit.cc: New info from weapons.dat and
	  ammo.dat can now be edited in Exult Studio. Also, modified the 'ready spot'
	  menu from 'Shape Info' window in preparation to getting it to work.
	* content/sifixes/resurrect.uc: Fixed resurrection bug when target NPC was
	  alive but in the House of the Dead.

2005-07-08  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Implemented missile rotation and speed, using data from weapons.dat; this
	  data is now saved and loaded correctly.
	* Modified the animation speed of attacks; it now uses get_std_delay to
	  determine speed.
	* Modified very slightly the way attack frames are handled.
	* Fixed initialization bug of casting frames.

2005-07-05  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Allow si_tournament to be used in BG. Also, introduced bg_dont_move
	  flag for BG, which works like dont_move does in SI. Finally, updated
	  the cheat screen's flag names to reflect the flag names as they are
	  defined in "flags.h".
	* Implemented the use of casting frames when casting spells. Also added
	  a new intrinsic called 'begin_casting_mode' which activates the use of