@@ -1,3 +1,9 @@
+2005-07-11  Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* mapedit/studio.h, etc: Implemented game detection code and ready spots.
+	  I am trusting exult.cfg to be accurate, which I am not sure is wise :-)
+	* objs.cc, etc: In fixing the cannon, I broke the Test of Virtue. Both work
+	  now. Powderkegs are now dangerous to attack, as in the original.
+
 2005-07-10  Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* shapes/shapeinf.h, mapedit/exult_studio.glade, shapeedit.cc: Corrected
 	  damage type (from 'poison' to 'lightning') and added two other damage
